# nza-arithmetic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: thesis.md
examples/: demo.py
src/nza/: __init__.py  core.py
tests/: test_nza.py
