[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nza-arithmetic"
dynamic = ["version"]
description = "N-Zero Arithmetic (NZA): Mathematical framework distinguishing local labels from infinite universe total. No true zeros or negatives."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Kentaro & Sukezo", email = "kenoidart@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://ampfinity.pages.dev/nza-paper"
Repository = "https://github.com/super-morphist-sukezo/nza-arithmetic"
Documentation = "https://nza-arithmetic.readthedocs.io"
"Paper (HTML)" = "https://github.com/super-morphist-sukezo/nza-arithmetic/blob/main/docs/nza-full-thesis-v4_super-morphist-sukezo.md"
Thesis = "https://arxiv.org/abs/placeholder"  # later

[tool.hatch.version]
path = "src/nza/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/nza",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nza"]
